fix: Make img caption smaller (#197)

--- a/ietf/static_src/css/streamfield.scss
+++ b/ietf/static_src/css/streamfield.scss
@@ -11,6 +11,11 @@
     margin-bottom: 1.5em;
 }
 
+.block-image .caption {
+    margin-bottom: 1.5em;
+    font-size: 14px;
+}
+
 .block-paragraph {
     .rich-text {
         ul {
